# Compiler-Generator

./: .gitignore  CMakeLists.txt  DFAOptimizer.cpp  DFAOptimizer.h  Driver.cpp  Driver.h  FiniteAutomata.cpp  FiniteAutomata.h  InfixToPostfixConverter.cpp  InfixToPostfixConverter.h  InputToRegexParser.cpp  InputToRegexParser.h  Lexer.cpp  Lexer.h  RegexToNFAParser.cpp  RegexToNFAParser.h  RegularExpression.cpp  RegularExpression.h  SymbolTable.cpp  SymbolTable.h  Token.cpp  Token.h  lexer_input  lexer_output  lexical_input  lexical_input.txt  main.cpp  pdf_example  rules_input  simple_lexical_input  test_cases
DFA/: DFABuilder.cpp  DFABuilder.h  DFAGraph.cpp  DFAGraph.h  DFAState.cpp  DFAState.h  NFA Example.txt  NFAToDFAParser.cpp  NFAToDFAParser.h
NFA/: NFABuilder.cpp  NFABuilder.h  NFAFragment.cpp  NFAState.cpp  NFAState.h
Utilities/: InfixToPostfixConverter.cpp  InfixToPostfixConverter.h  LexicalContract.h
lexerGenerator/: DFAOptimizer.cpp  DFAOptimizer.h  Lexer.cpp  Lexer.h  RegularExpression.cpp  RegularExpression.h  SymbolTable.h  Token.h  lexerMain.cpp  lexer_input  lexer_output  rules_input  simple_lexical_input
lexerGenerator/DFA/: DFABuilder.cpp  DFABuilder.h  DFAState.cpp  DFAState.h  NFAToDFAParser.cpp  NFAToDFAParser.h
lexerGenerator/NFA/: NFABuilder.h  NFAFragment.h  NFAState.h
lexerGenerator/Utilities/: InfixToPostfixConverter.cpp  LexicalContract.h
parserGenerator/: EliminatorMain.cpp  GrammarScanner.cpp  GrammarScanner.h  InputBuffer.cpp  InputBuffer.h  LL1Parser.cpp  LL1Parser.h  NonTerminal.cpp  NonTerminal.h  ParseTable.cpp  ParseTable.h  ParseTableBuilder.cpp  ParseTableBuilder.h  ParserContract.h  Production.cpp  Production.h  Symbol.cpp  Symbol.h  Terminal.cpp  Terminal.h  eliminator_output  parserMain.cpp  parser_debugging  parser_input  parser_output
parserGenerator/LRAndLFElimination/: LREliminator.cpp  LREliminator.h  LeftFactoringEliminator.cpp  LeftFactoringEliminator.h
